--- a/index.html
+++ b/index.html
@@ -38,17 +38,20 @@
                         <li>Fast in making crucial decisions</li>
                         <li>Can adapt fast in a new group environment</li>
                     </ul>
-                    <p>For anyone wanting to HMU for all kinds of things from collaboration, etc
+                    <p>For collaborations, etc,
                         <br>
-                        feel free to contact me from the links below!
+                        feel free to contact me!
+                        <br>
                         <br>
                         <div class="socialmedias">
+                                <p>Jl. Wisma Permai III No.11, RT.003/RW.05 (Indekos Bu Yuni 3)</p>
+                            <p>trschnrangga@gmail.com</p>
                             <a href="https://www.instagram.com/trschnrangga/" target="_blank">Instagram</a>
                             &nbsp<a href="https://www.linkedin.com/in/trischanma/" target="_blank">LinkedIn</a>
                         </div>
                     </p>
                 </div>
-                <p class="clinks"><a href="resources/CV.pdf" target="_blank">My CV! (click here)</a></p>
+                <p class="clinks"><a href="resources/CV.pdf" target="_blank">My CV</a></p>
         </div>
         <div class="projects">
                 <br><br>Projects/Designs:
