--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" 
+    rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Website</title>
@@ -53,10 +54,14 @@
                 </div>
                 <p class="clinks"><a href="resources/CV.pdf" target="_blank">My CV</a></p>
         </div>
+        <div class="cpara1">
+            <p class="clinks"><a href="pagetugas/list.html">Page Tugas Pemrograman Web</a></p>
+        </div>
         <div class="projects">
                 <br><br>Projects/Designs:
                 <p>Click The Cat!</p>
-                <a href="https://github.com/trschnrangga/Whispers-Of-The-Void" target="_blank"><img class="cat" src="pictures/whispers.png" alt="Whispers-Of-The-Void.png"></a>
+                <a href="https://github.com/trschnrangga/Whispers-Of-The-Void" target="_blank">
+                    <img class="cat" src="pictures/whispers.png" alt="Whispers-Of-The-Void.png"></a>
         </div>
         
     </div>
