added event homework page

--- a/pagetugas/list.html
+++ b/pagetugas/list.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div>
-        <p><a href="tugas2.html" target="_blank">Tugas 2 (Tabel)</a></p>
+        <p><a href="tugas3.html" target="_blank">Tugas 3 (Tabel)</a></p>
+        <p><a href="tugas4.html" target="_blank">Tugas 4 (Website Event)</a></p>
     </div>
 </body>
 </html>
