added tugas 4 (form)

--- a/pagetugas/list.html
+++ b/pagetugas/list.html
@@ -9,7 +9,8 @@
 <body>
     <div>
         <p><a href="tugas3.html" target="_blank">Tugas 3 (Tabel)</a></p>
-        <p><a href="tugas4.html" target="_blank">Tugas 4 (Website Event)</a></p>
+        <p><a href="tugas4.html" target="_blank">Tugas 3 (Website Event)</a></p>
+        <p><a href="tugas5.html" target="_blank">Tugas 4(Form Registrasi)</a></p>
     </div>
 </body>
 </html>
