added tugas menu makanan

--- a/pagetugas/list.html
+++ b/pagetugas/list.html
@@ -11,6 +11,7 @@
         <p><a href="tugas3.html" target="_blank">Tugas 3 (Tabel)</a></p>
         <p><a href="tugas4.html" target="_blank">Tugas 3 (Website Event)</a></p>
         <p><a href="tugas5.html" target="_blank">Tugas 4(Form Registrasi)</a></p>
+        <p><a href="warungtegal.html" target="_blank">Tugas Menu Makanan</a></p>
     </div>
 </body>
 </html>
