Added new work based on the study case "landing page"
added new page for PWEB work

--- a/pagetugas/list.html
+++ b/pagetugas/list.html
@@ -12,6 +12,7 @@
         <p><a href="tugas4.html" target="_blank">Tugas 3 (Website Event)</a></p>
         <p><a href="tugas5.html" target="_blank">Tugas 4(Form Registrasi)</a></p>
         <p><a href="warungtegal.html" target="_blank">Tugas Menu Makanan</a></p>
+        <p><a href="landingpage.html" target="_blank">Tugas Studi Kasus(Landing Page)</a></p>
     </div>
 </body>
 </html>
