added a test preload

--- a/pagetugas/list.html
+++ b/pagetugas/list.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preload" href="gambar/" as="image">
     <link rel="stylesheet" href="list.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
