--- a/pagetugas/list.html
+++ b/pagetugas/list.html
@@ -15,6 +15,7 @@
         <p><a href="warungtegal.html" target="_blank">Tugas Menu Makanan</a></p>
         <p><a href="landingpage.html" target="_blank">Tugas Studi Kasus(Landing Page)</a></p>
         <p><a href="coursepage.html" target="_blank">Tugas Landing Page(Course)</a></p>
+        <p><a href="ETS/ETS.html" target="_blank">Mid-Term Exam (UTS/ETS)</a></p>
     </div>
 </body>
 </html>
