--- a/index.html
+++ b/index.html
@@ -15,66 +15,84 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Website</title>
     <link rel="stylesheet" href="test.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+    </style>
 </head>
 <body>
-    <div class="content">
-        <img class="avatar" src="pictures/ranggaz.jpeg" alt="avatar">
-        <div class="cintro">
-            <p><span >My name is...</span><br>Trischan Mahdy Arangga!</p>
-        </div>
-        <div class="cpara1">
-            <p>Im currently a software engineering student in 
-                Institut Teknologi Sepuluh Nopember, located in Surabaya!
-                <br>
-                I am a student who is always eager to learn more about IT in general, ive indulged in a bit of game dev before this and
-                right now im really looking forward to learning <span>HTML,CSS,JS</span> for website development!
-                <br>
-                and so this is my <span>"Portfolio"</span> website, down below you will see some of my work in the past
-                year or so from college!
-                <br><br>
-                Before all of that, let me list my skills first:</p>
-                <div>
-                    <ul>
-                        <li>Fluent in English</li>
-                        <li>Good at designing things (mainly Photoshop)</li>
-                        <li>Fast in making crucial decisions</li>
-                        <li>Can adapt fast in a new group environment</li>
-                    </ul>
-                    <p>For collaborations, etc,
-                        <br>
-                        feel free to contact me!
-                        <br>
-                        <br>
-                        <div class="socialmedias">
-                                <p>Jl. Wisma Permai III No.11, RT.003/RW.05 (Indekos Bu Yuni 3)</p>
-                            <p>trschnrangga@gmail.com</p>
-                            <a href="https://www.instagram.com/trschnrangga/" target="_blank">Instagram</a>
-                            &nbsp<a href="https://www.linkedin.com/in/trischanma/" target="_blank">LinkedIn</a>
-                        </div>
-                    </p>
+    <div class="allcontent">
+        <div class="aboveimgcontainer">
+            <div class ="bgimg"></div>
+            <div class="background">
+                <div class="orb1"></div>
+                <div class="orb12"></div>
+                <div class="orb2"></div>
+                <div class="orb21"></div>
+                <div class="orb3"></div>
+              </div>
+            <div class="content">
+                <div class="avatarcontainer">
+                    <img class="avatar" src="pictures/ranggaz.jpeg" alt="avatar">
                 </div>
-                <p class="clinks"><a href="resources/CV.pdf" target="_blank">My CV</a></p>
+                <div class ="banner"></div>
+                <div class="cintro">
+                    <p><span >My name is...</span><br>Trischan Mahdy Arangga!</p>
+                </div>
+                <div class="cpara1">
+                    <p>&ensp;Im currently a software engineering student in 
+                        Institut Teknologi Sepuluh Nopember, located in Surabaya!
+                        <br>
+                        I am a student who is always eager to learn more about IT in general, ive indulged in a bit of game dev before this and
+                        right now im really looking forward to learning <span>HTML,CSS,JS</span> for website development!
+                        <br>
+                        and so this is my <span>"Portfolio"</span> website, down below you will see some of my work in the past
+                        year or so from college!<br></p>
+                        <p>I'm also really interested in graphic design, and UI/UX, as you can see below are my poster designs</p>
+                        <div class="list">
+                            <p>Before all of that, let me list my skills first:</p>
+                            <ul>
+                                <li>Fluent in English</li>
+                                <li>Good at designing things (mainly Photoshop)</li>
+                                <li>Fast in making crucial decisions</li>
+                                <li>Can adapt fast in a new group environment</li>
+                                <li>Motivated and really interested in learning new things</li>
+                            </ul>
+                            <p>For collaborations, etc,
+                                <br>
+                                feel free to contact me!
+                                <br>
+                                <br>
+                                <div class="socialmedias">
+                                        <p>Jl. Wisma Permai III No.11, RT.003/RW.05 (Indekos Bu Yuni 3)</p>
+                                    <p>trschnrangga@gmail.com</p>
+                                    <a href="https://www.instagram.com/trschnrangga/" target="_blank">Instagram</a>
+                                    &nbsp<a href="https://www.linkedin.com/in/trischanma/" target="_blank">LinkedIn</a>
+                                </div>
+                            </p>
+                        </div>
+                        <p class="clinks"><a href="resources/CV.pdf" target="_blank">My CV</a></p>
+                </div>
+                <div class="cpara1">
+                    <p class="clinks"><a href="pagetugas/list.html">Page Tugas Pemrograman Web</a></p>
+                </div>
+                <div class="projects">
+                        <br><br>Projects/Designs:
+                        <p>Click The Cat!</p>
+                        <a href="https://github.com/trschnrangga/Whispers-Of-The-Void" target="_blank">
+                        <img class="cat" src="pictures/whispers.png" alt="Whispers-Of-The-Void.png"></a>
+                </div>
+            </div>
         </div>
-        <div class="cpara1">
-            <p class="clinks"><a href="pagetugas/list.html">Page Tugas Pemrograman Web</a></p>
+        <div class="image-container" id="scroll-container">
+            <img src="pictures/homuncbw.jpg" alt="">
+            <img src="pictures/homuncw.jpg" alt="">
+            <img src="pictures/durden.png" alt="">
+            <img src="pictures/bluelilyinv.jpg" alt="">
+            <img src="pictures/lilystock.jpg" alt="">
+            <img src="pictures/LIGHTOKUN1.jpg" alt="">
+            <img src="pictures/tylers.png" alt="">
+            <img src="pictures/indecisive.png" alt="">
         </div>
-        <div class="projects">
-                <br><br>Projects/Designs:
-                <p>Click The Cat!</p>
-                <a href="https://github.com/trschnrangga/Whispers-Of-The-Void" target="_blank">
-                    <img class="cat" src="pictures/whispers.png" alt="Whispers-Of-The-Void.png"></a>
-        </div>
-        
-    </div>
-    <div class="image-container" id="scroll-container">
-        <img src="pictures/homuncbw.jpg" alt="">
-        <img src="pictures/homuncw.jpg" alt="">
-        <img src="pictures/durden.png" alt="">
-        <img src="pictures/bluelilyinv.jpg" alt="">
-        <img src="pictures/lilystock.jpg" alt="">
-        <img src="pictures/LIGHTOKUN1.jpg" alt="">
-        <img src="pictures/tylers.png" alt="">
-        <img src="pictures/indecisive.png" alt="">
     </div>
     <script src="smoothscroll.js"></script>
     <script src="script.js"></script>
