--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="preload" href="pictures/" as="image">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio Website</title>
+    <title>Trischan Mahdy A | Portfolio</title>
 </head>
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,8 +13,8 @@
     rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio Website</title>
     <link rel="stylesheet" href="test.css">
+    <link rel="icon" type="image/jpg" href="icon.jpg">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
     </style>
