--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </div>
                 <div class ="banner"></div>
                 <div class="cintro">
-                    <p><span >My name is...</span><br>Trischan Mahdy Arangga!</p>
+                    <p><span >Hi, its me</span><br>Trischan Mahdy Arangga!</p>
                 </div>
                 <div class="cpara1">
                     <p>&ensp;Im currently a software engineering student in 
