--- a/pagetugas/list.html
+++ b/pagetugas/list.html
@@ -16,6 +16,7 @@
         <p><a href="landingpage.html" target="_blank">Tugas Studi Kasus(Landing Page)</a></p>
         <p><a href="coursepage.html" target="_blank">Tugas Landing Page(Course)</a></p>
         <p><a href="ETS/ETS.html" target="_blank">Mid-Term Exam (UTS/ETS)</a></p>
+        <p><a href="Bootstrap Login Page/login.html">Login and Register Bootstrap</a></p>
     </div>
 </body>
 </html>
